# tirrad-exchange-system

./: .gitignore  ACTIVE_TASKS.md  AGENTS.md  CMakeLists.txt  CMakePresets.json  CODEX_STATE.md  CODEX_TASK_TEMPLATE.md  CODEX_VALIDATION.md  CODEX_WORKFLOW.md  COMPLETED_TASKS.md  LICENSE  NEXT_TASK.md  OBJECTIVES.md  OPERATIONS.md  README.md  ROADMAP.md  requirements.txt  tes
.github/: CODEOWNERS  CONTRIBUTING.md  pull_request_template.md
.github/workflows/: remove-codex-label.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  api.md  auctions.md  benchmarks.md  cli.md  dashboard.md  distributed_execution.md  execution.md  hidden_iceberg_orders.md  local-development.md  market_controls.md  replay_verification.md  replay_viewer.md  roadmap.md  strategies.md  tournaments.md
engine/: CMakeLists.txt  README.md  build.ps1
engine/benchmarks/: engine_bench.cpp
engine/include/tes/: events.hpp  format.hpp  market_data.hpp  matching_engine.hpp  order.hpp  order_book.hpp  replay_log.hpp  types.hpp  version.hpp
engine/python/: README.md  bindings.cpp
engine/src/: market_data.cpp  matching_engine.cpp  version.cpp
engine/tests/: test_accounting.cpp  test_auction.cpp  test_market_data.cpp  test_matching_engine.cpp  test_order_book.cpp  test_replay_log.cpp  test_types_and_events.cpp  test_version.cpp
examples/: basic_simulation.py  save_and_load_run.py
scripts/: build_engine.sh  configure_python_bindings.ps1
sim/: tes_engine_adapter.py
sim/api/: __init__.py  app.py  errors.py  main.py  models.py  tournaments.py
sim/api/execution/: __init__.py  executor.py  queue.py  scheduler.py  worker.py
sim/api/routes/: benchmarks.py  health.py  runs.py  scheduler.py  tournaments.py
sim/api/services/: backtest_service.py  benchmark_service.py  replay_service.py  run_service.py  session_service.py  stream_service.py  tournament_service.py
sim/api/storage/: __init__.py  base.py  in_memory.py  sqlite.py
sim/backtest/: __init__.py  runner.py
sim/session/: __init__.py  models.py  participants.py  runner.py  scenarios.py
sim/strategies/: __init__.py  fok_failure.py  fok_success.py  ioc_partial_fill.py  market_against_resting.py  new_order_support.py
sim/tes_analytics/: __init__.py  summary.py  trades.py
sim/tes_benchmarks/: __init__.py  cli.py  models.py  runner.py
sim/tes_cli/: __init__.py  cli.py
sim/tes_cli/commands/: backtest.py  demo.py  inspect.py  list_strategies.py  replay.py  run.py  save.py  session.py
sim/tes_models/: __init__.py  commands.py  events.py
sim/tes_persistence/: __init__.py  events.py  layout.py  metadata.py  runs.py
sim/tes_replay/: __init__.py  playback.py  replay.py  validation.py  verification.py
sim/tes_run/: __init__.py  ids.py
sim/tes_serialization/: __init__.py  events.py
sim/tes_simulation/: __init__.py  results.py  runner.py  strategy_metadata.py  strategy_runner.py
sim/tes_strategy/: examples.py  registry.py  strategy.py
sim/tests/: conftest.py  test_examples.py  test_saved_run_example.py  test_tes_account_performance.py  test_tes_analytics.py  test_tes_api.py  test_tes_api_cli.py  test_tes_backtest.py  test_tes_benchmarks.py  test_tes_cli.py  test_tes_cli_demo.py  test_tes_cli_inspect.py  test_tes_cli_list_strategies.py  test_tes_cli_replay.py  test_tes_cli_run.py  test_tes_cli_save.py  test_tes_command_models.py  test_tes_engine_adapter.py  test_tes_engine_contract.py  test_tes_engine_depth.py  test_tes_engine_risk_modes.py  test_tes_engine_smoke.py  test_tes_event_models.py  test_tes_event_persistence.py  test_tes_event_serialization.py  test_tes_execution_queue.py  test_tes_full_integration.py  test_tes_market_controls.py  test_tes_market_data_recorder.py  test_tes_market_session.py  test_tes_metadata_persistence.py  test_tes_new_order_strategy_fixtures.py  test_tes_persistence_integration.py  test_tes_replay.py  test_tes_replay_validation.py  test_tes_replay_verification.py  test_tes_root_cli.py  test_tes_run_ids.py  test_tes_run_layout.py  test_tes_run_persistence.py  (+11 more)
web/: .env.example  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
web/src/app/: layout.tsx  page.tsx
web/src/app/benchmarks/: page.tsx
web/src/app/health/: page.tsx
web/src/app/runs/: page.tsx
web/src/app/runs/[runId]/: page.tsx
web/src/app/runs/[runId]/live/: page.tsx
web/src/app/runs/[runId]/replay/: page.tsx
web/src/app/runs/compare/: page.tsx
web/src/app/tournaments/: page.tsx
web/src/app/tournaments/[tournamentId]/: page.tsx
web/src/app/workers/: page.tsx
web/src/components/: JsonBlock.tsx  LiveMonitor.tsx  MarketDataPanel.tsx  MetricCard.tsx  ReplayViewer.test.tsx  ReplayViewer.tsx  RunCompareClient.tsx  RunDetailClient.tsx  RunsBrowser.test.tsx  RunsBrowser.tsx  RunsTable.test.tsx  RunsTable.tsx  StatusBadge.tsx  TimelineViewer.test.tsx  TimelineViewer.tsx
web/src/components/tournaments/: TournamentLeaderboard.tsx
web/src/hooks/: useAsync.ts  useRunStream.test.ts  useRunStream.ts
web/src/lib/api/: client.test.ts  client.ts  metrics.ts
web/src/styles/: globals.css
web/src/types/: api.ts
